# distillary

./: .gitignore  404.html  AGENTS.md  CNAME  README.md  article.md  brains.example.yaml  index.css  index.html  index.xml  install.sh  planb.md  publish.sh  pyproject.toml  readme.html  setup.sh  sitemap.xml  test-questions.md
.claude/: CLAUDE.md
1---Getting-Started/: index.html  quick-start.html
2---Concepts/: analytics.html  brain-structure.html  entities-and-bridges.html  how-it-works.html  index.html  note-format.html  pyramid-design.html  tag-taxonomy.html
3---Deployment/: architecture.html  index.html  publishing.html
4---For-Agents/: agent-retrieval.html  demo.html  index.html
design/: architecture.html  index.html
distillary/: agent_index.py  cross_vault.py  doctor.py  notes.py  publish.py  sharing.py  vault_ops.py
docs/: extend-ideas.md  index.md  plan.md  research-agent-discovery.md  vault-comparison.md
features/: argumentation-layer.html  deep-research.html  index.html  multi-brain.html  source-verification.html  tag-taxonomy.html
getting-started/: commands.html  how-it-works.html  index.html  quick-start.html
guides/: agent-retrieval.html  applications.html  architecture.html  argumentation-layer.html  commands.html  deep-research.html  how-it-works.html  index.html  multi-brain.html  publishing.html  quick-start.html  source-verification.html
quartz-config/: Footer.tsx  quartz.config.ts  quartz.layout.ts
reviews/: review1.md  review4.md
sharing/: agent-retrieval.html  applications.html  index.html  publishing.html
tags/: index.html
(+55 files in other folders)
